--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "0.34.4",
+    "@fujocoded/expressive-code-output": "0.0.1",
     "astro": "5.10.1",
     "sharp": "0.34.2",
     "starlight-versions": "0.5.3"
