--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,5 @@
 {
   "extends": "astro/tsconfigs/strict",
   "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/components/*": ["./src/components/*"],
-      "@/*": ["./src/*"]
-    }
-  }
+  "exclude": ["dist"]
 }
