--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "@astrojs/starlight": "0.34.4",
     "@fujocoded/expressive-code-output": "0.0.1",
-    "astro": "5.10.1",
-    "sharp": "0.34.2",
+    "astro": "5.11.0",
+    "sharp": "0.34.3",
     "starlight-versions": "0.5.3"
   },
   "devDependencies": {
@@ -38,5 +38,5 @@
   "engines": {
     "node": ">=22.x"
   },
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
