Add comprehensive workflows for content creation, development, and research
- Introduced a detailed content creation workflow guide, covering writing, editing, and optimization tasks.
- Added a development workflow guide, outlining code review, bug investigation, and documentation generation processes.
- Created a research and analysis workflow guide, focusing on information gathering, data analysis, and competitive research techniques.

--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "fmt:fix": "prettier --config prettier.config.mjs --write ./src"
   },
   "dependencies": {
-    "@astrojs/starlight": "0.34.4",
+    "@astrojs/starlight": "0.34.7",
     "@fujocoded/expressive-code-output": "0.0.1",
-    "astro": "5.11.0",
+    "astro": "5.11.1",
     "sharp": "0.34.3",
-    "starlight-versions": "0.5.3"
+    "starlight-versions": "0.5.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
@@ -38,5 +38,5 @@
   "engines": {
     "node": ">=22.x"
   },
-  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
+  "packageManager": "pnpm@10.13.1"
 }
